--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,17 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --exit"
   },
   "dependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "node-fetch": "^3.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^9.1.3"
   }
 }
