--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test",
+    "test": "craco test --forceExit",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
